--- a/src/components/NegFlag/negflag.css
+++ b/src/components/NegFlag/negflag.css
@@ -3,7 +3,6 @@
   width: 100%;
   margin-top: 50px;
 }
-
 .nf-element {
   position: relative;
   width: fit-content;
@@ -65,43 +64,35 @@
   background-color: var(--orange-gradient);
 }
 
-/* Bordure partielle en bas */
+/* Bottom partial border */
 .nf-element::before {
   height: 2px;
-  width: 25%; /* Longueur partielle de la bordure en bas */
+  width: 25%;
   bottom: 0;
   right: 0;
-  /*box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.5);  Ombre extérieure 
-  clip-path: polygon(90% 0, 100% 0, 100% 100%, 0 100%, 0 90%, 90% 90%);*/
 }
 
-/* Bordure partielle à gauche */
+/* Left partial border */
 .nf-element::after {
   width: 2px;
-  height: 50%; /* Hauteur partielle de la bordure à gauche */
+  height: 50%;
   top: 0;
   left: 0;
-  /*box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.5);  Ombre intérieure 
-  clip-path: polygon(0 0, 100% 0, 100% 10px, 10px 10px, 10px 100%, 0 100%);*/
 }
 
-/* Bordure à droite */
+/* Right border */
 .nf-element2::before {
   width: 3px;
-  height: 100%; /* Longueur partielle de la bordure en bas */
+  height: 100%;
   bottom: 0;
   right: 0;
   z-index: 25;
-  /*box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.5);  Ombre extérieure 
-  clip-path: polygon(90% 0, 100% 0, 100% 100%, 0 100%, 0 90%, 90% 90%);*/
 }
-/* Bordure en haut */
+/* Top border */
 .nf-element2::after {
   width: 100%;
-  height: 3px; /* Longueur partielle de la bordure en bas */
+  height: 3px;
   top: 0;
   right: 0;
   z-index: 20;
-  /*box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.5);  Ombre extérieure 
-  clip-path: polygon(90% 0, 100% 0, 100% 100%, 0 100%, 0 90%, 90% 90%);*/
 }
