--- a/src/components/buttons/ButtonTwo/buttontwo.css
+++ b/src/components/buttons/ButtonTwo/buttontwo.css
@@ -20,8 +20,6 @@
 /* 12 */
 .btn-12 {
   position: relative;
-  /*right: 20px;
-  bottom: 20px;*/
   border: none;
   box-shadow: none;
   width: 215px;
@@ -31,12 +29,6 @@
   perspective: 230px;
 }
 .btn-12 span {
-  /*background: rgba(62, 147, 125, 1);
-  background: linear-gradient(
-    0deg,
-    var(--primary-gradient) 0%,
-    var(--primary) 100%
-  );*/
   display: block;
   position: absolute;
   width: 215px;
@@ -55,8 +47,6 @@
 .btn-12 span:nth-child(1) {
   top: 0;
   left: 0;
-  /*box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9,
-    7px 7px 20px 0px #0002, 4px 4px 5px 0px #0001;*/
   box-shadow: none;
   -webkit-transform: rotateX(85deg);
   -moz-transform: rotateX(85deg);
@@ -83,8 +73,7 @@
   transform: rotateX(0deg);
 }
 .btn-12:hover span:nth-child(2) {
-  box-shadow: none; /*inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
-    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);*/
+  box-shadow: none;
   color: transparent;
   -webkit-transform: rotateX(-85deg);
   -moz-transform: rotateX(-85deg);
