--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -103,6 +103,11 @@ footer {
   padding: 10px 5px;
   color: white;
   text-decoration: none;
+  display: block;
+}
+.copyright {
+  display: block;
+  padding: 10px 0;
 }
 .footer-bottom a:hover {
   text-decoration: underline;
