--- a/src/components/NavBar/menu.css
+++ b/src/components/NavBar/menu.css
@@ -104,9 +104,12 @@ nav {
   justify-content: flex-end;
   height: 100%;
 }
+nav .nav-ul {
+  display: flex;
+  padding: 0;
+}
 nav li {
   position: relative;
-
   display: flex;
   height: 100%;
   display: flex;
