--- a/src/components/ContactForm/contactform.css
+++ b/src/components/ContactForm/contactform.css
@@ -19,7 +19,7 @@
   margin-top: 4px;
 }
 .contact-form textarea {
-  margin-bottom: 7px;
+  margin-bottom: 0;
   height: 218px;
 }
 
@@ -40,6 +40,7 @@
 .c-yup {
   color: tomato;
   text-align: center;
+  margin-bottom: 0;
 }
 .c-yup::before {
   display: inline;
