--- a/src/app/contact/contact.css
+++ b/src/app/contact/contact.css
@@ -50,14 +50,25 @@ main {
 }
 .address-link {
   display: flex;
-  width: 100%;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   text-decoration: none;
   border: 1px solid var(--primary);
   border-radius: 10px;
   overflow: hidden;
-  margin-bottom: 10px;
+  margin-bottom: 14px;
+  min-height: 92px;
+}
+.address-double-link {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center;
+  text-decoration: none;
+  padding: 6px 0 6px 15px;
+}
+.address-double-link:hover {
+  background: var(--green-fog);
 }
 .address {
   margin: 0;
@@ -72,12 +83,23 @@ main {
   align-items: flex-start;
   flex-grow: 1;
   height: 100%;
+  padding: 5px 0 5px 15px;
   padding-left: 15px;
+  font-size: 0.8rem;
+}
+.right-double-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-grow: 1;
+  height: 100%;
   font-size: 0.8rem;
 }
 .right-div:hover {
   background-color: var(--green-fog);
 }
+
 .lefted {
   text-align: left;
 }
@@ -130,9 +152,32 @@ main {
   width: 100%;
   box-shadow: 0 -20px 30px var(--green-fog);
 }
+
+.infos-title {
+  font-weight: bold;
+}
+.infos-separator {
+  height: 1px;
+  width: 30px;
+  background-color: var(--primary);
+  margin: 0 0 0 15px;
+}
+.infos-div {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+.infos-svg-container {
+  width: 85px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: none;
+}
+
 /* Mobile Styles */
 .contact-wrapper h2 {
-  font-size: 1.25rem; /* 28px */
+  font-size: 1.25rem;
   margin-top: 20px;
 }
 
@@ -155,7 +200,8 @@ main {
     width: 33%;
     height: 150px;
   }
-  .right-div {
+  .right-div,
+  .right-double-div {
     font-size: 1rem;
   }
 }
@@ -194,7 +240,8 @@ main {
     padding: 0 0 20px 0;
     text-align: left;
   }
-  .right-div {
+  .right-div,
+  .right-double-div {
     font-size: 1.1rem;
   }
 }
