--- a/src/components/Articles/article.css
+++ b/src/components/Articles/article.css
@@ -24,6 +24,14 @@
   height: fit-content;
 }
 
+.wp-block-image {
+  display: flex;
+  flex-direction: column;
+}
+
+.wp-block-image .aligncenter {
+  align-self: center;
+}
 /* Mobile Styles */
 
 /* Tablet Styles */
